# Contact_Manager_Full_App

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: index.md  reference.md  user_guide.md
reference/: index.html
search/: search_index.json
src/: __init__.py  exceptions.py  services.py
src/api/: config.py  dependencies.py  main.py  schemas.py
src/api/routers/: contacts.py
src/frontend/: app.py  styles.py
src/frontend/views/: analytics.py  directory.py  form.py  update_phone.py
src/models/: contact.py  country.py  number.py  person.py
src/storage/: base.py  json_storage.py  supabase_storage.py
tests/: conftests.py
tests/unit/: test_models.py  test_services.py
user_guide/: index.html
